--- a/render.yaml
+++ b/render.yaml
@@ -5,3 +5,4 @@ services:
     plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn main:app --timeout 120
+    gunicorn main:app --timeout 120
