--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,5 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn main:app --timeout 120
-    gunicorn main:app --timeout 120
+    startCommand: gunicorn main:app --timeout 120 --workers 1 --threads 4
+
